--- a/hymvideoview/build.gradle
+++ b/hymvideoview/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile project(':baseLib')
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 }
